@@ -1,3 +1,12 @@
+2008-08-27  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>
+
+	* lib/python/vasputil/supercell.py: Change to use list of atomic
+	symbols.
+	(add): New method.
+	(sortAtoms): New method.
+	(getAtomSymbolCount): New method.
+	(write_poscar): Make format match VASP.
+
 2008-08-26  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>
 
 	* bin/vasputil_interpolate: New file.
